{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 1712,
  "lineage": "7cb303bf-0b3d-08c9-8984-b8ed185a2753",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002a5b3b1b718bd43",
            "association_id": "eipassoc-058ca3af2f4e4bd97",
            "domain": "vpc",
            "id": "eipalloc-002a5b3b1b718bd43",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0b6b9e9b110f19f12",
            "private_dns": "ip-10-0-1-184.eu-central-1.compute.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-18-153-162-63.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.162.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d1042c7ea617cc1",
            "association_id": "eipassoc-0ae4b3b2484c50980",
            "domain": "vpc",
            "id": "eipalloc-01d1042c7ea617cc1",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-067ce6687e8981a63",
            "private_dns": "ip-10-0-2-56.eu-central-1.compute.internal",
            "private_ip": "10.0.2.56",
            "public_dns": "ec2-18-157-238-60.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.238.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:internet-gateway/igw-0cd11734183abb818",
            "id": "igw-0cd11734183abb818",
            "owner_id": "178344858845",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "vpc_id": "vpc-0b0bfd0515bb0f6d7"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/app/frontend-application/93941917ada8e2a2",
            "arn_suffix": "app/frontend-application/93941917ada8e2a2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-frontend-application-1172688538.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/app/frontend-application/93941917ada8e2a2",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-application",
            "preserve_host_header": false,
            "security_groups": [
              "sg-029febc930582a46e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02fccad1793fccbd8"
              },
              {
                "subnet_id": "subnet-033e57dab94252537"
              }
            ],
            "subnets": [
              "subnet-02fccad1793fccbd8",
              "subnet-033e57dab94252537"
            ],
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "vpc_id": "vpc-0b0bfd0515bb0f6d7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_subnet.frontend_a",
            "aws_subnet.frontend_b",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/net/frontend-network/d469a6b5ed1f8c46",
            "arn_suffix": "net/frontend-network/d469a6b5ed1f8c46",
            "dns_name": "frontend-network-d469a6b5ed1f8c46.elb.eu-central-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/net/frontend-network/d469a6b5ed1f8c46",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "frontend-network",
            "security_groups": [
              "sg-029febc930582a46e"
            ],
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-002a5b3b1b718bd43",
                "subnet_id": "subnet-02fccad1793fccbd8"
              },
              {
                "allocation_id": "eipalloc-01d1042c7ea617cc1",
                "subnet_id": "subnet-033e57dab94252537"
              }
            ],
            "subnets": [
              "subnet-02fccad1793fccbd8",
              "subnet-033e57dab94252537"
            ],
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "vpc_id": "vpc-0b0bfd0515bb0f6d7",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "aws_eip.frontend_a",
            "aws_eip.frontend_b",
            "aws_security_group.frontend",
            "aws_subnet.frontend_a",
            "aws_subnet.frontend_b",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_application_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:listener/app/frontend-application/93941917ada8e2a2/2ec47445c1377218",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-application/dfe0387ce9e8b0a9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:listener/app/frontend-application/93941917ada8e2a2/2ec47445c1377218",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/app/frontend-application/93941917ada8e2a2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend_application",
            "aws_lb_target_group.frontend_application",
            "aws_security_group.frontend",
            "aws_subnet.frontend_a",
            "aws_subnet.frontend_b",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:listener/net/frontend-network/d469a6b5ed1f8c46/68a8b5983dcd7227",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-network/6ebf9f0a22a07cf0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:listener/net/frontend-network/d469a6b5ed1f8c46/68a8b5983dcd7227",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/net/frontend-network/d469a6b5ed1f8c46",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.frontend_a",
            "aws_eip.frontend_b",
            "aws_lb.frontend_network",
            "aws_lb_target_group.frontend_network",
            "aws_security_group.frontend",
            "aws_subnet.frontend_a",
            "aws_subnet.frontend_b",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-application/dfe0387ce9e8b0a9",
            "arn_suffix": "targetgroup/frontend-application/dfe0387ce9e8b0a9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 120,
                "matcher": "200",
                "path": "/api/health-check/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-application/dfe0387ce9e8b0a9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-application",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b0bfd0515bb0f6d7"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-network/6ebf9f0a22a07cf0",
            "arn_suffix": "targetgroup/frontend-network/6ebf9f0a22a07cf0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 120,
                "matcher": "200-399",
                "path": "/api/health-check/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-network/6ebf9f0a22a07cf0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-network",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-0b0bfd0515bb0f6d7"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-network/6ebf9f0a22a07cf0-20231104230753242800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:targetgroup/frontend-network/6ebf9f0a22a07cf0",
            "target_id": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/app/frontend-application/93941917ada8e2a2"
          },
          "dependencies": [
            "aws_lb.frontend_application",
            "aws_lb_target_group.frontend_network",
            "aws_security_group.frontend",
            "aws_subnet.frontend_a",
            "aws_subnet.frontend_b",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:route-table/rtb-00f9b003cf3390915",
            "id": "rtb-00f9b003cf3390915",
            "owner_id": "178344858845",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd11734183abb818",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0bfd0515bb0f6d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_frontend_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf5030718214da95",
            "route_table_id": "rtb-00f9b003cf3390915",
            "subnet_id": "subnet-02fccad1793fccbd8"
          },
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_route_table.prod",
            "aws_subnet.frontend_a",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_frontend_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5328f6bb604d02",
            "route_table_id": "rtb-00f9b003cf3390915",
            "subnet_id": "subnet-033e57dab94252537"
          },
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_route_table.prod",
            "aws_subnet.frontend_b",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:security-group/sg-029febc930582a46e",
            "description": "frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029febc930582a46e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DHCP",
                "from_port": 68,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 68
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Unknown reason",
                "from_port": 323,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 323
              }
            ],
            "name": "frontend",
            "name_prefix": "",
            "owner_id": "178344858845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0bfd0515bb0f6d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:subnet/subnet-02fccad1793fccbd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fccad1793fccbd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "178344858845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "vpc_id": "vpc-0b0bfd0515bb0f6d7"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:subnet/subnet-033e57dab94252537",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033e57dab94252537",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "178344858845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "vpc_id": "vpc-0b0bfd0515bb0f6d7"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:vpc/vpc-0b0bfd0515bb0f6d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00fa9ef884cb9255a",
            "default_route_table_id": "rtb-0fee381faa335c471",
            "default_security_group_id": "sg-0baf6174b4764e0a4",
            "dhcp_options_id": "dopt-03e81fa6e131921a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0bfd0515bb0f6d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fee381faa335c471",
            "owner_id": "178344858845",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}